# flask-erp

./: README.md  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst
flask_erp/: app.py  cbv.py
flask_erp/client/: todo_client.py
flask_erp/di/: di.py
flask_erp/expose/: book_blueprint.py  test_blueprint.py  todo_blueprint.py  user_blueprint.py
flask_erp/model/: Todo.py  User.py
flask_erp/repository/: todo_repository.py
flask_erp/service/: todo_service.py  user_service.py
flask_erp/static/: signup.css  w3 copy.css  w3.css
flask_erp/templates/: index.html  login.html  setdata.html  signup.html  student.html
flask_erp/util/: __init__.py
